updating some pages and components to use api-functions
